<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="@drawable/blur"
    android:id="@+id/main_activity_blur">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brownish">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/title"
        android:textColor="@color/lesswhite"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_text"
        android:layout_alignStart="@+id/email_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name_text"
        android:layout_alignStart="@+id/name_text"
        android:layout_marginBottom="6dp"
        android:text="@string/name"
        android:textColor="@color/morewhite" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_text"
        android:layout_alignStart="@+id/email_text"
        android:text="@string/email"
        android:textColor="@color/morewhite" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_text"
        android:layout_alignStart="@+id/password_text"
        android:text="@string/password"
        android:textColor="@color/morewhite" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@color/morewhite"
        android:text="@string/account"
        android:textColor="@color/lessbrown"
        android:textSize="20sp"
        tools:background="@drawable/rounded_corners" />

    <TextView
        android:id="@+id/member_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/previous_user" />

    <TextView
        android:id="@+id/name_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name_text"
        android:layout_marginBottom="9dp"
        android:layout_toEndOf="@+id/name_text"
        android:text="@string/problem"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/email_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/email_text"
        android:layout_marginBottom="9dp"
        android:layout_toEndOf="@+id/email_text"
        android:text="@string/problem"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/password_problem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_text"
        android:layout_marginBottom="9dp"
        android:layout_toEndOf="@+id/password_text"
        android:text="@string/problem"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />
</RelativeLayout>
</FrameLayout>